--- a/exam-3/63_IPv6.md
+++ b/exam-3/63_IPv6.md
@@ -1,1 +1,51 @@
+IPv6
 
+Question
+
+On ServerB, add the following IPV6 address statically to your current running interface. Do this in a way that doesn’t compromise your existing settings:
+
+    IPV6 – fd01::103/64
+
+Overall explanation
+
+You can check if IPV6 is enabled on your system using the following method:
+
+Run the following command:
+
+$ sudo sysctl -a | grep ipv6.*disable
+
+A value of 0 indicates that IPv6 is active on your system.
+
+Note that
+
+    The command “sysctl” is used to manipulate kernel parameters at runtime, and the “-a” option shows all kernel parameters. The “grep” command filters the output and looks for lines containing the words "ipv6" and "disable".
+
+    IPv6 is enabled by default on RHEL 9.
+
+To add the IPV6 to the "enp0s3" interface, run:
+
+1. To display the currently active network connections, run:
+
+# nmcli con sh --active
+
+2.
+
+# nmcli con mod myprofile2 +ipv6.addresses fd01::103/64 ipv6.method manual
+
+3. To reload NetworkManager configuration files without restarting the NetworkManager service, run:
+
+# nmcli connection reload
+
+OR
+
+To bring up “myprofile2” network connection, run:
+
+# nmcli con up myprofile2
+
+4. To verify, use:
+
+# nmcli dev sh enp0s3
+
+OR
+
+# nmcli con sh myprofile2 
