--- a/exam-3/63_IPv6.md
+++ b/exam-3/63_IPv6.md
@@ -3,49 +3,49 @@ IPv6
 Question
 
 On ServerB, add the following IPV6 address statically to your current running interface. Do this in a way that doesn’t compromise your existing settings:
+IPV6 address: fd01::103/64
 
-    IPV6 – fd01::103/64
+<detail>
 
-Overall explanation
+```bash
+ssh rhcsaB
+sudo -i
+```
 
-You can check if IPV6 is enabled on your system using the following method:
+1. Check if ipv6 is in enabled
+```
+sysctl -a | grep ipv6.*disable
+```
+A value of 0 indicates that IPv6 is active on your system. (IPv6 is enabled by default on RHEL 9.)
 
-Run the following command:
+2. Show activ connections
+```
+nmcli con show --active
+```
 
-$ sudo sysctl -a | grep ipv6.*disable
+3. add the ipv6 address
 
-A value of 0 indicates that IPv6 is active on your system.
+```bash
+nmcli con mod ens18i +ipv6.addresses fd01::103/64 ipv6.method manual
+```
 
-Note that
+4. Reload NetworkManager configuration files without restarting the NetworkManager service, and bring hte interface up
+```bash
+nmcli connection reload
+nmcli con up ens18
 
-    The command “sysctl” is used to manipulate kernel parameters at runtime, and the “-a” option shows all kernel parameters. The “grep” command filters the output and looks for lines containing the words "ipv6" and "disable".
+or
 
-    IPv6 is enabled by default on RHEL 9.
+nmcli con down ens18
+nmcli con up ens18
 
-To add the IPV6 to the "enp0s3" interface, run:
 
-1. To display the currently active network connections, run:
+```
 
-# nmcli con sh --active
 
-2.
+5. Verify IPv6 settings
+```bash
+nmcli con show ens18
+```
 
-# nmcli con mod myprofile2 +ipv6.addresses fd01::103/64 ipv6.method manual
-
-3. To reload NetworkManager configuration files without restarting the NetworkManager service, run:
-
-# nmcli connection reload
-
-OR
-
-To bring up “myprofile2” network connection, run:
-
-# nmcli con up myprofile2
-
-4. To verify, use:
-
-# nmcli dev sh enp0s3
-
-OR
-
-# nmcli con sh myprofile2 
+</detail>
